<resources>
    <string name="action_logout">Logout</string>
    <string name="app_name">SafeZoneParent</string>
    <string name="action_settings">Settings</string>
    <string name="btnEdit">Edit</string>
    <string name="title_activity_add_childent">AddChildentActivity</string>
    <string name="title_activity_add_childrent">AddChildrentActivity</string>
    <string name="full_name">Full Name:</string>
    <string name="age">Age:</string>
    <string name="nick_name">Nick name:</string>
    <string name="grade">Grade:</string>
    <string name="picture">Picture:</string>
    <string name="title_add_child">Add Child</string>
    <string name="title_activity_detail_children">DetailChildren</string>
    <string name="title_activity_show_selection">ShowSelectionActivity</string>
    
    <string name="btnLocation">Location</string>
    <string name="btnWeb">Web History</string>
    <string name="btnCall">Call History</string>
    <string name="btnTimetable">Timetable</string>
</resources>
