<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_show_selection"
    tools:context="com.example.activity.safezoneparent.ShowSelectionActivity"
    android:background="#5f6da5b3"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        android:layout_margin="20dp"

        >
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLocation"
        android:text="@string/btnLocation"
        android:layout_margin="7dp"
        android:layout_weight="1"
        android:background="@drawable/background_select_white"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:drawableLeft="@drawable/ic_action_ic_map"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnWeb"
        android:text="@string/btnWeb"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_select_white"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:drawableLeft="@drawable/ic_action_ic_web"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCall"
        android:text="@string/btnCall"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_select_white"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:drawableLeft="@drawable/ic_action_ic_call2"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnTimetable"
        android:text="@string/btnTimetable"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_select_white"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:drawableLeft="@drawable/ic_action_ic_timetable"
        />
    </LinearLayout>
</RelativeLayout>
